ORACLETOOLS-317: Docker network commands and functional tests