@@ -15,6 +15,10 @@
         Functional and Integration tests for the Docker Runtime Management module.
     </description>
 
+    <properties>
+        <oracle.tools.container.tests.jre/>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.oracle.tools</groupId>
@@ -26,19 +30,6 @@
             <groupId>com.oracle.tools</groupId>
             <artifactId>oracle-tools-testing-support</artifactId>
             <version>${project.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.oracle.tools.coherence</groupId>
-            <artifactId>coherence-12.2.1-testing-support</artifactId>
-            <version>${project.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.oracle.coherence</groupId>
-            <artifactId>coherence</artifactId>
-            <version>12.2.1-0-1</version>
             <scope>test</scope>
         </dependency>
 
@@ -72,6 +63,24 @@
                 <version>${maven.deploy.plugin.version}</version>
                 <configuration>
                     <skip>true</skip>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.plugin.version}</version>
+                <configuration>
+                    <argLine>-Xms800m -Xmx800m -XX:MaxPermSize=500m</argLine>
+                    <includes>
+                        <include>**/*IT.java</include>
+                        <include>**/*Test.java</include>
+                        <include>**/*Tests.java</include>
+                    </includes>
+                    <systemPropertyVariables>
+                        <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
+                        <oracle.tools.container.tests.jre>${oracle.tools.container.tests.jre}</oracle.tools.container.tests.jre>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
         </plugins>
